RESOLVED FIXED170911
[MediaStream] Fix typo in UIDelegate::mediaCaptureStateDidChange
https://bugs.webkit.org/show_bug.cgi?id=170911
Summary [MediaStream] Fix typo in UIDelegate::mediaCaptureStateDidChange
Eric Carlson
Reported 2017-04-17 13:11:31 PDT
Fix typo in UIDelegate::mediaCaptureStateDidChange
Attachments
Proposed patch. (1.52 KB, patch)
2017-04-17 13:14 PDT, Eric Carlson
no flags
Archive of layout-test-results from ews106 for mac-elcapitan-wk2 (842.55 KB, application/zip)
2017-04-17 14:32 PDT, Build Bot
no flags
Eric Carlson
Comment 1 2017-04-17 13:14:11 PDT
Created attachment 307289 [details] Proposed patch.
Radar WebKit Bug Importer
Comment 2 2017-04-17 13:14:41 PDT
Build Bot
Comment 3 2017-04-17 14:32:54 PDT
Comment on attachment 307289 [details] Proposed patch. Attachment 307289 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/3552985 New failing tests: webrtc/multi-video.html
Build Bot
Comment 4 2017-04-17 14:32:55 PDT
Created attachment 307300 [details] Archive of layout-test-results from ews106 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews106 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
WebKit Commit Bot
Comment 5 2017-04-17 15:17:27 PDT
Comment on attachment 307289 [details] Proposed patch. Clearing flags on attachment: 307289 Committed r215436: <http://trac.webkit.org/changeset/215436>
WebKit Commit Bot
Comment 6 2017-04-17 15:17:29 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.