[MediaStream] Fix typo in UIDelegate::mediaCaptureStateDidChange https://bugs.webkit.org/show_bug.cgi?id=170911

Reviewed by Youenn Fablet.

* UIProcess/Cocoa/UIDelegate.mm:
(WebKit::UIDelegate::UIClient::mediaCaptureStateDidChange): Fix typo.


Canonical link: https://commits.webkit.org/187846@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215436 268f45cc-cd09-0410-ab3c-d52691b4dbfc